--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,6 +23,7 @@ jobs:
         run: yarn test:e2e
       - name: Publish test results
         uses: actions/upload-artifact@v3
+        if: always()
         with:
           name: junit-results
           path: reports/*.xml
