--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20' # Specify the Node.js version you need
       - name: Install Yarn
@@ -17,10 +17,10 @@ jobs:
         run: yarn install
       - name: Run unit tests
         run: yarn test
-      - name: Build
-        run: yarn build
       - name: Run e2e tests
-        run: yarn test:e2e
+        run: |
+          yarn build
+          yarn test:e2e
       - name: Publish test results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
