--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Yarn
         run: npm install -g yarn
       - name: Install Dependencies
-        run: yarn install
+        run: yarn
       - name: Run unit tests
         run: yarn test
       - name: Run e2e tests
